--- a/EC2/public/landing.html
+++ b/EC2/public/landing.html
@@ -5,7 +5,7 @@
     <!-- Basic Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room Mitra | AI-Powered Guest Service for Hotels via Alexa & WhatsApp</title>
+    <title>Room Mitra | AI-Assisted Guest Service for Hotels via Alexa & WhatsApp</title>
     <meta name="description"
         content="Room Mitra offers AI-powered guest service solutions for hotels via Alexa and WhatsApp chatbots. Delight guests, boost efficiency, and grow revenue. Request a demo today.">
     <meta name="keywords"
@@ -24,7 +24,7 @@
         content="AI-powered guest service for hotels via Alexa and WhatsApp. Delight guests, boost efficiency, and grow revenue with Room Mitra." />
     <meta name="twitter:image" content="https://www.roommitra.com/og-image.jpg" />
     <!-- Favicon -->
-    <link rel="icon" href="https://www.roommitra.com/favicon.ico">
+    <link rel="icon" href="./logo.png">
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;500;400&family=Roboto:wght@400;500&display=swap"
@@ -105,7 +105,7 @@
         }
 
         .logo-img {
-            width: 150px;
+            width: 110px;
             height: 50px;
             margin-right: 0.7rem;
             border-radius: 8px;
@@ -301,7 +301,7 @@
             border-radius: 15px;
             padding: 1.7rem 1.1rem 1.3rem 1.1rem;
             min-width: 200px;
-            max-width: 310px;
+            max-width: 300px;
             text-align: center;
             margin-bottom: 1.2rem;
             box-shadow: 0 1px 8px rgba(22, 16, 50, 0.09);
@@ -469,6 +469,10 @@
             color: #ececec;
         }
 
+        .gold-color {
+            color: #e2c044;
+        }
+
         .footer-logo {
             display: flex;
             align-items: center;
@@ -613,11 +617,19 @@
             <h2 class="benefits-title" id="benefits-title">Benefits for Hotels</h2>
             <div class="benefits-list">
                 <div class="benefit-item" data-animate>
+                    <span class="benefit-icon" aria-hidden="true">🛎️</span>
+                    <div class="benefit-title">Guest Convenience</div>
+                    <div class="benefit-desc">
+                        24/7 voice & text based instant assistance and multi-language
+                        support to wow every
+                        guest.
+                    </div>
+                </div>
+                <div class="benefit-item" data-animate>
                     <span class="benefit-icon" aria-hidden="true">🌟</span>
                     <div class="benefit-title">Guest Delight</div>
                     <div class="benefit-desc">
-                        24/7 instant assistance, personalized recommendations, and multi-language support to wow every
-                        guest.
+                        Music, News, Weather, Games and much much more to turn rooms into entertainment centers.
                     </div>
                 </div>
                 <div class="benefit-item" data-animate>
@@ -633,6 +645,22 @@
                     <div class="benefit-desc">
                         Upsell hotel services, promote offers, and capture more bookings through seamless guest
                         engagement.
+                    </div>
+                </div>
+                <div class="benefit-item" data-animate>
+                    <span class="benefit-icon" aria-hidden="true">🎯</span>
+                    <div class="benefit-title">Deep Personalisation</div>
+                    <div class="benefit-desc">
+                        Tailor guest experiences with personalized recommendations, preferences, and services to create
+                        unforgettable stays.
+                    </div>
+                </div>
+                <div class="benefit-item" data-animate>
+                    <span class="benefit-icon" aria-hidden="true">📊</span>
+                    <div class="benefit-title">Dashboard and Reports</div>
+                    <div class="benefit-desc">
+                        Gain actionable insights with real-time analytics and detailed reports to make data-driven
+                        decisions for your hotel.
                     </div>
                 </div>
             </div>
@@ -664,6 +692,30 @@
                         Never miss a guest request. Our AI handles routine support so you always deliver 5-star service.
                     </div>
                 </div>
+                <div class="feature-item" data-animate>
+                    <span class="feature-icon" aria-hidden="true">📱</span>
+                    <div class="feature-title">Digital Check-In and Check-Out</div>
+                    <div class="feature-desc">
+                        Simplify the guest experience with seamless digital check-in and check-out, reducing wait times
+                        and enhancing convenience.
+                    </div>
+                </div>
+                <div class="feature-item" data-animate>
+                    <span class="feature-icon" aria-hidden="true">💡</span>
+                    <div class="feature-title">Voice-Controlled Electronics</div>
+                    <div class="feature-desc">
+                        Guests can control room electronics like lights, curtains, and thermostats using simple voice
+                        commands for a smarter stay.
+                    </div>
+                </div>
+                <div class="feature-item" data-animate>
+                    <span class="feature-icon" aria-hidden="true">🎺</span>
+                    <div class="feature-title">Entertainment Hub</div>
+                    <div class="feature-desc">
+                        Guests can play music, check the weather, and plan their day – all hands-free using voice
+                        commands for a personalized experience.
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -681,6 +733,13 @@
                     <input type="email" id="email" name="email" required autocomplete="email" aria-required="true"
                         placeholder="you@email.com">
                 </div>
+
+                <div class="form-group">
+                    <label for="phone">Phone Number <span aria-hidden="true" style="color:#b00020">*</span></label>
+                    <input type="tel" id="phone" name="phone" required autocomplete="phone" aria-required="true"
+                        placeholder="Your Phone Number">
+                </div>
+
                 <div class="form-group">
                     <label for="hotel">Hotel Name <span aria-hidden="true" style="color:#b00020">*</span></label>
                     <input type="text" id="hotel" name="hotel" required aria-required="true" placeholder="Hotel Name">
@@ -710,11 +769,11 @@
                 <a href="https://linkedin.com/company/room-mitra" target="_blank" rel="noopener"
                     aria-label="LinkedIn"><span aria-hidden="true">in</span></a>
                 <a href="mailto:info@roommitra.com" aria-label="Email"><span aria-hidden="true">@</span></a>
-                <a href="tel:+911234567890" aria-label="Call"><span aria-hidden="true">📞</span></a>
+                <a href="tel:+919886653557" aria-label="Call"><span aria-hidden="true">☎️</span></a>
             </div>
             <div class="footer-contact">
-                <span>Email: <a href="mailto:info@roommitra.com">info@roommitra.com</a></span> |
-                <span>Phone: <a href="tel:+911234567890">+91 12345 67890</a></span>
+                <span>Email: <a href="mailto:info@roommitra.com" class="gold-color">info@roommitra.com</a></span> |
+                <span>Phone: <a href="tel:+919886653557" class="gold-color">+91 9886653557</a></span>
             </div>
             <div class="copyright">
                 &copy; 2025 Room Mitra. All rights reserved.
@@ -750,12 +809,33 @@
         // Basic demo form handler (no backend, just confirmation)
         document.getElementById('demoForm').addEventListener('submit', function (e) {
             e.preventDefault();
+            const formData = new FormData(this);
+            const formObject = Object.fromEntries(formData.entries()); // Convert to JSON-like object
+            console.log('Form submitted:', formObject); // Log to console (for demo purposes)
             var formMsg = document.getElementById('formMsg');
             formMsg.style.display = "block";
             formMsg.textContent = "Thank you! We'll get in touch soon.";
             formMsg.style.color = "#161032";
             this.reset();
             setTimeout(function () { formMsg.style.display = "none"; }, 6000);
+            const apiUrl = 'https://roommitra.com/leads'
+            fetch(apiUrl, {
+                method: 'POST',
+                body: JSON.stringify(formObject),
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            })
+                .then(res => res.json())
+                .then(data => {
+                    // alert('Thank you for contacting us!');
+                    this.reset();
+                })
+                .catch(err => {
+                    console.error('Error:', err);
+                    // alert('Something went wrong. Please try again.');
+                });
+
         });
     </script>
 </body>
