ec2 & Ui :: updated name to room genie

--- a/EC2/public/landing.html
+++ b/EC2/public/landing.html
@@ -598,7 +598,9 @@
                     <li><a href="#benefits">Benefits</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#demo">Request Demo</a></li>
+                    <li><a href="https://theroomgenie.vercel.app/login">Login</a></li>
                 </ul>
+
             </nav>
         </div>
         <section class="hero" id="top" aria-labelledby="hero-title">
