--- a/EC2/public/LandingPage/landing.html
+++ b/EC2/public/LandingPage/landing.html
@@ -697,7 +697,7 @@
                     <li><a href="#features">Features</a></li>
                     <li><a href="#demo">Request Demo</a></li>
                     <li><a href="../Blog/BlogListing.html">Blogs</a></li>
-                    <li><a href="https://roommitra.vercel.app//login">Login</a></li>
+                    <li><a href="https://theroommitra.vercel.app/login">Login</a></li>
                 </ul>
 
             </nav>
