faq feature updated

--- a/EC2/public/Commands/Commands.html
+++ b/EC2/public/Commands/Commands.html
@@ -64,7 +64,7 @@
 <body>
     <div class="header">
         <h1>🏨 Welcome to Room Mitra</h1>
-        <p>Just say "Alexa, ask Room Mitra..." and you're all set!</p>
+        <p>Just say "Alexa, ask Room Service..." and you're all set!</p>
     </div>
 
     <div class="section">
